--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
-.ytTimer {
+.betterYT {
     font-size: 14px;
     font-family: "Roboto", "Noto", sans-serif;
     font-weight: 500;
     color: rgb(170, 170, 170);
+    margin-top: 4px;
 }
