Add input slider for volume control. Fix: volume is now consistent when changing videos.

--- a/styles.css
+++ b/styles.css
@@ -36,3 +36,10 @@
     font-weight: bold;
     margin: 0;
 }
+
+.volumeSlider{
+    -webkit-appearance: slider-vertical;
+    position: absolute;
+    right: -40px;
+    top: 40px;
+}
