--- a/styles.css
+++ b/styles.css
@@ -43,3 +43,62 @@
     right: -40px;
     top: 40px;
 }
+
+.lazymode-switch {
+    position: relative;
+    display: inline-block;
+    width: 48px;
+    height: 27px;
+}
+
+/* Hide default HTML checkbox */
+.lazymode-switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+.lazymode-slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #272727;
+    -webkit-transition: .4s;
+    transition: .4s;
+    border-radius: 27px;
+}
+
+.lazymode-slider:hover {
+    background-color: #3f3f3f;
+}
+
+.lazymode-slider:before {
+    position: absolute;
+    content: "";
+    height: 20px;
+    width: 20px;
+    left: 3px;
+    bottom: 3px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+    border-radius: 50%;
+}
+
+input:checked + .lazymode-slider {
+    background-color: #3ea6ff;
+}
+
+input:focus + .lazymode-slider {
+    box-shadow: 0 0 1px #3ea6ff;
+}
+
+input:checked + .lazymode-slider:before {
+    -webkit-transform: translateX(21px);
+    -ms-transform: translateX(21px);
+    transform: translateX(21px);
+}
+  
