--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,9 @@
+.betterYT {
+    font-size: 16px;
+    font-weight: bold;
+    text-align: center;
+}
+
 .betterYT-renderer {
     display: inline-block;
 }
