--- a/popup.css
+++ b/popup.css
@@ -1,3 +1,7 @@
+body {
+    font-family: "Source Sans Pro", "Arial", sans-serif;
+}
+
 @media (prefers-color-scheme: dark) {
     body {
       background: #292a2d;
