fix volume slider on other site, closes #25

--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@
     display: flex;
 }
 
-.volume-slider{
+.betterYT-volume-slider{
     -webkit-appearance: slider-vertical;
     position: absolute;
     right: -40px;
