--- a/styles.css
+++ b/styles.css
@@ -1,151 +1,150 @@
 .betterYT {
-  font-size: 16px;
-  font-weight: bold;
-  text-align: center;
+    font-size: 16px;
+    font-weight: bold;
+    text-align: center;
 }
 
 .betterYT-renderer {
-  display: inline-block;
+    display: inline-block;
 }
 
 .betterYT-button-shape {
-  display: flex;
+    display: flex;
 }
 
 .betterYT-volume-slider {
-  -webkit-appearance: none;
-  position: absolute;
-  right: 28px;
-  top: 44px;
-  width: 10rem;
-  opacity: 0.4;
-  pointer-events: all !important;
-  cursor: pointer;
-  background-color: #f00;
-  height: 4px;
-  border-radius: 4px;
-  transform-origin: right top;
-  transform: rotate(-90deg);
-  box-shadow: 0 0 10px 2px #28282866;
+    position: absolute;
+    right: 28px;
+    top: 44px;
+    width: 10rem;
+    opacity: 0.4;
+    pointer-events: all !important;
+    cursor: pointer;
+    background-color: #f00;
+    height: 4px;
+    border-radius: 4px;
+    transform-origin: right top;
+    transform: rotate(-90deg);
+    box-shadow: 0 0 10px 2px #28282866;
 }
 .betterYT-volume-slider::-webkit-slider-thumb {
-  -webkit-appearance: none;
-  appearance: none;
-  width: 16px;
-  height: 16px;
-  background: #fff;
-  border-radius: 50%;
-  box-shadow: 0 0 5px #28282888;
-  cursor: pointer;
+    -webkit-appearance: none;
+    appearance: none;
+    width: 16px;
+    height: 16px;
+    background: #fff;
+    border-radius: 50%;
+    box-shadow: 0 0 5px #28282888;
+    cursor: pointer;
 }
 
 .betterYT-volume-slider::-moz-range-thumb {
-  width: 16px;
-  height: 16px;
-  background: #fff;
-  border-radius: 50%;
-  box-shadow: 0 0 5px #28282888;
-  cursor: pointer;
+    width: 16px;
+    height: 16px;
+    background: #fff;
+    border-radius: 50%;
+    box-shadow: 0 0 5px #28282888;
+    cursor: pointer;
 }
 
 @supports (-moz-appearance: none) {
-  .volume-slider {
-    right: 16px;
-  }
+    .volume-slider {
+        right: 16px;
+    }
 }
 
-.volume-slider:hover {
-  opacity: 1;
+.volume-slider:hover{
+    opacity: 1;
 }
 
 .autoplay-switch {
-  position: relative;
-  display: inline-block;
-  width: 48px;
-  height: 27px;
+    position: relative;
+    display: inline-block;
+    width: 48px;
+    height: 27px;
 }
 
 /* Hide default HTML checkbox */
 .autoplay-switch input {
-  opacity: 0;
-  width: 0;
-  height: 0;
+    opacity: 0;
+    width: 0;
+    height: 0;
 }
 
 .autoplay-slider {
-  position: absolute;
-  cursor: pointer;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: #272727;
-  -webkit-transition: 0.4s;
-  transition: 0.4s;
-  border-radius: 27px;
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #272727;
+    -webkit-transition: .4s;
+    transition: .4s;
+    border-radius: 27px;
 }
 
 .autoplay-slider:hover {
-  background-color: #3f3f3f;
+    background-color: #3f3f3f;
 }
 
 .autoplay-slider:before {
-  position: absolute;
-  content: "";
-  height: 20px;
-  width: 20px;
-  left: 3px;
-  bottom: 3px;
-  background-color: white;
-  -webkit-transition: 0.4s;
-  transition: 0.4s;
-  border-radius: 50%;
+    position: absolute;
+    content: "";
+    height: 20px;
+    width: 20px;
+    left: 3px;
+    bottom: 3px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+    border-radius: 50%;
 }
 
 input:checked + .autoplay-slider {
-  background-color: #3f3f3f;
+    background-color: #3f3f3f;
 }
 
 input:checked + .autoplay-slider:before {
-  -webkit-transform: translateX(21px);
-  -ms-transform: translateX(21px);
-  transform: translateX(21px);
+    -webkit-transform: translateX(21px);
+    -ms-transform: translateX(21px);
+    transform: translateX(21px);
 }
-
+  
 @media screen and (max-width: 599px) {
-  .volumeSlider {
-    -webkit-appearance: slider-horizontal;
-    right: 44px;
-    top: 18px;
-  }
-  .autoplay-slider {
-    background-color: #ffffff1a;
-  }
-  input:checked + .autoplay-slider {
-    background-color: #ffffff2a;
-  }
-  .betterYT-auto {
-    padding-bottom: 16px;
-  }
+    .volumeSlider {
+      -webkit-appearance: slider-horizontal;
+      right: 44px;
+      top: 18px;
+    }
+    .autoplay-slider {
+        background-color: #FFFFFF1A;
+    }
+    input:checked + .autoplay-slider {
+        background-color: #FFFFFF2A;
+    }
+    .betterYT-auto {
+        padding-bottom: 16px;
+    }
 }
 
-.betterYT-progress-bar {
-  bottom: 0;
-  pointer-events: auto !important;
+.betterYT-progress-bar{
+    bottom: 0;
+    pointer-events: auto !important;
 }
 
-.betterYT-progress-bar-hover {
-  height: 10px !important;
-  cursor: pointer;
+.betterYT-progress-bar-hover{
+    height: 10px !important;
+    cursor: pointer;
 }
 
-.betterYT-timestamp-tooltip {
-  position: absolute;
-  display: none;
-  background-color: #272727c4;
-  border-radius: 5px;
-  padding: 4px;
-  font-size: 11px;
-  color: white;
-  z-index: 50;
+.betterYT-timestamp-tooltip{
+    position: absolute;
+    display: none;
+    background-color: #272727c4;
+    border-radius: 5px;
+    padding: 4px;
+    font-size: 11px;
+    color: white;
+    z-index: 50;
 }
