--- a/popup.css
+++ b/popup.css
@@ -186,7 +186,7 @@ a {
 	width: 100%;
 	height: 100%;
 	overflow: auto;
-	background-color: var(--text-primary-color);
+	background-color: rgba(0, 0, 0, 0.4);
 }
 
 .modal-content {
