--- a/popup.css
+++ b/popup.css
@@ -256,3 +256,44 @@ a {
 	outline: none !important;
 	box-shadow: 0 0 3px #00000020;
 }
+
+
+
+.extra_options--row
+{
+  display: grid;
+  grid-template-columns: 5fr 1fr;
+  text-wrap: balance;
+  margin-bottom: 16px;
+}
+
+.extra_options--row:last-child()
+{
+  margin-bottom: 0;
+}
+
+
+.extra_options--row input[type="number"],
+.extra_options--row input[type="text"]
+{
+  outline: none;
+  border: 1px var( --bg-secondary-hover-color ) solid;
+  background: var( --bg-secondary-hover-color );
+  color: var(--text-primary-color);
+  padding: 0 1rem;
+  border-radius: 100vh;
+  width: 5rem;
+}
+.extra_options--row input[type="number"]:focus,
+.extra_options--row input[type="text"]:focus
+{
+  border: 2px var(--yt-brand-color) solid;
+}
+
+
+.extra_options--row input[type="checkbox"],
+.extra_options--row input[type="radio"],
+.extra_options--row input[type="range"]
+{
+  accent-color: var(--yt-brand-color);
+}
