updated html and css

--- a/popup.css
+++ b/popup.css
@@ -27,6 +27,7 @@ body {
 	font-family: 'Source Sans Pro', 'Roboto', 'Noto', 'Arial', sans-serif;
 	background: var(--bg-primary-color);
 	color: var(--text-primary-color);
+  scrollbar-gutter: stable;
 }
 .modal-content {
 	background: var(--bg-primary-color);
@@ -111,6 +112,12 @@ svg:hover {
 
 .edit-svg {
 	fill: var(--bg-primary-hover-color);
+}
+
+.edit-btn {
+  background: none;
+  outline: none;
+  border: none;
 }
 
 table {
@@ -254,5 +261,29 @@ a {
 #keybind-input:focus {
 	outline: 0;
 	outline: none !important;
-	box-shadow: 0 0 3px #00000020;
+	box-shadow: 0 0 3px ;
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 0.5rem;
+  
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: transparent;
+  height: 4rem;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: var(--bg-secondary-color);
+  height: 4rem;
+  border-radius: 1rem;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: var(--bg-secondary-hover-color);
 }
