--- a/popup.css
+++ b/popup.css
@@ -107,6 +107,14 @@ svg:hover {
 	margin: 0;
 }
 
+label {
+	font-size: 12px;
+}
+
+#extra_options_skip_threshold {
+	margin-left: 4px;
+}
+
 .textbox:focus {
 	outline: 0;
 	border-color: var(--call-to-action-color);
@@ -197,6 +205,7 @@ a {
 	box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.275);
 	cursor: pointer;
 	transition: all 0.3s ease;
+	font-size: 12px;
 }
 
 .btn:hover {
