--- a/src/css/popup.scss
+++ b/src/css/popup.scss
@@ -1,26 +1,37 @@
 :root {
-	--text-primary-color: #030303;
-	--text-secondary-color: #888;
-	--bg-primary-color: #fff;
-	--bg-primary-hover-color: #9d9ea1;
-	--bg-secondary-color: #f2f2f2;
-	--bg-secondary-hover-color: #e6e6e6;
-	--separation-line-color: #e5e5e5;
-	--yt-brand-color: #f00;
-	--suggested-action-color: #378de9;
-	--call-to-action-color: #3ea6ff;
+	
 }
 
-[data-theme='dark'] {
-	--text-primary-color: #fff;
-	--text-secondary-color: #888;
-	--bg-primary-color: #0f0f0f;
-	--bg-primary-hover-color: #9d9ea1;
-	--bg-secondary-color: #272727;
-	--bg-secondary-hover-color: #3d3d3d;
-	--separation-line-color: #3f3f3f;
-	--suggested-action-color: #1d5fd4;
-	--call-to-action-color: #3978e6;
+@media (prefers-color-scheme: light) 
+{
+  :root
+  {
+    --text-primary-color: #030303;
+    --text-secondary-color: #888;
+    --bg-primary-color: #fff;
+    --bg-primary-hover-color: #9d9ea1;
+    --bg-secondary-color: #f2f2f2;
+    --bg-secondary-hover-color: #e6e6e6;
+    --separation-line-color: #e5e5e5;
+    --yt-brand-color: #f00;
+    --suggested-action-color: #378de9;
+    --call-to-action-color: #3ea6ff;
+  }
+}
+@media (prefers-color-scheme: dark) 
+{
+  :root
+  {
+    --text-primary-color: #fff;
+    --text-secondary-color: #888;
+    --bg-primary-color: #0f0f0f;
+    --bg-primary-hover-color: #9d9ea1;
+    --bg-secondary-color: #272727;
+    --bg-secondary-hover-color: #3d3d3d;
+    --separation-line-color: #3f3f3f;
+    --suggested-action-color: #1d5fd4;
+    --call-to-action-color: #3978e6;
+  }
 }
 
 :where(
@@ -36,7 +47,7 @@
   th,
   p,
   li,
-  span,
+  span
 ){
   color: var(--text-primary-color);
 }
