--- a/src/css/popup.scss
+++ b/src/css/popup.scss
@@ -3,6 +3,7 @@
   --text-primary-color: #030303;
   --text-secondary-color: #888;
   --bg-primary-color: #fff;
+  --bg-modal-color: #ffffff33;
   --bg-primary-hover-color: #9d9ea1;
   --bg-secondary-color: #f2f2f2;
   --bg-secondary-hover-color: #e6e6e6;
@@ -10,6 +11,8 @@
   --yt-brand-color: #f00;
   --suggested-action-color: #378de9;
   --call-to-action-color: #3ea6ff;
+
+  --max-height: 600px; // of the chrome popup
 }
 
 @media (prefers-color-scheme: dark) 
@@ -19,6 +22,7 @@
     --text-primary-color: #fff;
     --text-secondary-color: #888;
     --bg-primary-color: #0f0f0f;
+    --bg-modal-color: #0f0f0f66;
     --bg-primary-hover-color: #9d9ea1;
     --bg-secondary-color: #272727;
     --bg-secondary-hover-color: #3d3d3d;
@@ -46,32 +50,31 @@
   color: var(--text-primary-color);
 }
 
+*
+{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
-	font-family: 'Source Sans Pro', 'Roboto', 'Noto', 'Arial', sans-serif;
-	background: var(--bg-primary-color);
-	color: var(--text-primary-color);
-  scrollbar-gutter: stable;
+  font-family: 'Source Sans Pro', 'Roboto', 'Noto', 'Arial', sans-serif;
+  background: var(--bg-primary-color);
+  color: var(--text-primary-color);
+  padding: 0.5rem 1rem;
 }
-.modal-content {
-	background: var(--bg-primary-color);
-	color: var(--text-primary-color);
-}
+
 tr:not(:first-child) {
-	background-color: var(--bg-secondary-color);
-	transition: all 0.3s ease;
+  background-color: var(--bg-secondary-color);
+  transition: all 0.3s ease;
 }
 tr:not(:first-child):hover {
-	background-color: var(--bg-secondary-hover-color);
-}
-#keybind-input {
-	background-color: var(--bg-primary-hover-color);
-	caret-color: var(--text-primary-color);
-	color: var(--text-primary-color);
+  background-color: var(--bg-secondary-hover-color);
 }
 
 // Separator
 .separation-line {
-	background-color: var(--separation-line-color);
+  background-color: var(--separation-line-color);
   margin-top: 5px;
   opacity: 0.9;
   border: none;
@@ -85,76 +88,76 @@ tr:not(:first-child):hover {
 }
 
 svg {
-	fill: var(--bg-primary-hover-color);
-	transition: all 0.5s ease;
+  fill: var(--bg-primary-hover-color);
+  transition: all 0.5s ease;
 }
 
 svg:hover {
-	cursor: pointer;
-	fill: var(--yt-brand-color) !important;
+  cursor: pointer;
+  fill: var(--yt-brand-color) !important;
 }
 
 .container {
-	width: 280px;
+  width: 280px;
 }
 
 .title-container {
-	display: flex;
-	justify-content: space-between;
-	flex-direction: row;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
 }
 
 .title {
-	font-size: 16px;
-	font-weight: bold;
+  font-size: 16px;
+  font-weight: bold;
 }
 
 .version {
-	color: var(--bg-primary-hover-color);
+  color: var(--bg-primary-hover-color);
 }
 
 .separation-line {
-	height: 1px;
-	width: 100%;
+  height: 1px;
+  width: 100%;
 }
 
 .textbox {
-	width: 100%;
-	font-size: 12px;
-	margin: 0;
+  width: 100%;
+  font-size: 12px;
+  margin: 0;
 }
 
 label {
-	font-size: 12px;
+  font-size: 12px;
 }
 
 #extra_options_skip_threshold {
-	margin-left: 4px;
+  margin-left: 4px;
 }
 
 .textbox:focus {
-	outline: 0;
-	border-color: var(--call-to-action-color);
+  outline: 0;
+  border-color: var(--call-to-action-color);
 }
 
 .keybind-wrapper {
-	display: flex;
-	flex-direction: row;
-	justify-content: center;
-	align-items: center;
-	gap: 10px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
 }
 
 .keybind-span {
-	padding: 3px 7px;
-	background-color: var(--bg-secondary-hover-color);
-	border-radius: 3px;
-	box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.275);
-	cursor: default;
+  padding: 3px 7px;
+  background-color: var(--bg-secondary-hover-color);
+  border-radius: 3px;
+  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.275);
+  cursor: default;
 }
 
 .edit-svg {
-	fill: var(--bg-primary-hover-color);
+  fill: var(--bg-primary-hover-color);
 }
 
 .edit-btn {
@@ -164,133 +167,121 @@ label {
 }
 
 table {
-	border-collapse: separate;
-	border-spacing: 0 2px;
+  border-collapse: separate;
+  border-spacing: 0 2px;
 }
 
 th {
-	font-size: 12px;
-	text-align: center;
+  font-size: 12px;
+  text-align: center;
 }
 
 td {
-	font-size: 12px;
-	padding: 7px 5px;
+  font-size: 12px;
+  padding: 7px 5px;
 }
 
 td:first-child {
-	padding-left: 6px;
+  padding-left: 6px;
 }
 
 td:first-child,
 th:first-child {
-	border-bottom-left-radius: 5px;
-	border-top-left-radius: 5px;
-	cursor: default;
+  border-bottom-left-radius: 5px;
+  border-top-left-radius: 5px;
+  cursor: default;
 }
 
 td:last-child,
 th:last-child {
-	border-bottom-right-radius: 5px;
-	border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+  border-top-right-radius: 5px;
 }
 
 .footer {
-	font-size: 10px;
-	text-align: center;
-	margin: 5px 0px;
+  font-size: 10px;
+  text-align: center;
+  margin: 5px 0px;
 }
 
 a {
-	color: var(--text-primary-color);
-	text-decoration: none;
-	display: flex;
+  color: var(--text-primary-color);
+  text-decoration: none;
+  display: flex;
 }
 
 .btn-wrapper {
-	display: flex;
-	justify-content: center;
-	flex-direction: row;
-	gap: 8px;
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  gap: 8px;
 }
 
 .modal {
-	display: none;
-	position: fixed;
-	z-index: 999;
-	left: 0;
-	top: 0;
-	width: 100%;
-	height: 100%;
-	overflow: auto;
-	background-color: rgba(0, 0, 0, 0.4);
+  display: none;
+  position: fixed;
+  z-index: 999;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.4);
 }
 
 .modal-content {
-	position: absolute;
-	left: 50%;
-	top: 50%;
-	transform: translate(-50%, -50%);
-	margin: auto;
-	padding: 0 8px 8px 8px;
-	width: 80%;
-	border-radius: 5px;
-	box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.7);
-}
-
-.modal-header {
-	display: flex;
-	justify-content: space-between;
-	flex-direction: row;
-	margin-bottom: 4px;
-	margin-top: 2px;
-	align-items: center;
-}
-
-.modal-title {
-	font-weight: bold;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  margin: auto;
+  padding: 0 8px 8px 8px;
+  width: 80%;
+  border-radius: 5px;
+  box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.7);
 }
 
 .close-btn {
-	color: var(--bg-primary-hover-color);
-	font-size: 20px;
-	font-weight: bold;
-	text-decoration: none;
-	cursor: pointer;
+  color: var(--bg-primary-hover-color);
+  font-size: 20px;
+  font-weight: bold;
+  text-decoration: none;
+  cursor: pointer;
+  transition: color 200ms; 
 }
 
 .close-btn:hover,
 .close-btn:focus {
-	color: var(--yt-brand-color);
-	text-decoration: none;
-	cursor: pointer;
+  color: var(--yt-brand-color);
+  text-decoration: none;
+  cursor: pointer;
 }
 
 .input-wrapper {
-	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
-	align-items: center;
-	margin: 10px 0px;
-	gap: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  margin: 10px 0px;
+  gap: 10px;
 }
 
 .prevent-selection {
-	-webkit-user-select: none; /* Safari */
-	-ms-user-select: none; /* IE 10 and IE 11 */
-	user-select: none; /* Standard syntax */
+  -webkit-user-select: none; /* Safari */
+  -ms-user-select: none; /* IE 10 and IE 11 */
+  user-select: none; /* Standard syntax */
 }
 
 #keybind-input {
-	width: 30%;
-	height: 1.5rem;
-	text-align: center;
+  width: 30%;
+  height: 1.5rem;
+  text-align: center;
 }
 
 #keybind-input:focus {
-	outline: 0;
-	outline: none !important;
-	box-shadow: 0 0 3px #00000020;
+  outline: 0;
+  outline: none !important;
+  box-shadow: 0 0 3px #00000020;
 }
 
 .extra_options--row
@@ -460,4 +451,109 @@ a {
   {
     color: var(--text-secondary-color);
   }
+}
+
+.--modal
+{
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  width: 100%;
+  height: 100%;
+
+  align-items: center;
+  justify-content: center;
+  
+  background: var( --bg-modal-color );
+
+  .--modal-header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    
+    .--modal-header-text
+    {
+      font-style: italic;
+      color: var(--text-secondary-color);
+      display: block;
+      
+      .--modal-command
+      {
+        font-style: normal;
+        display: block;
+        font-weight: bold;
+      }
+      
+    }
+    
+  }
+
+  .--modal-content {
+    background: var(--bg-primary-color);
+    color: var(--text-primary-color);
+    padding: 0.5rem;
+    border-radius: 0.5rem;
+    width: 80%;
+    box-shadow: 0 0 0.5rem 0.5rem var(--bg-modal-color);
+  }
+
+  .--modal-input {
+
+    outline: none;
+    border: none;
+    border-radius: 1rem;
+    font-size: 1.5rem;
+    width: 1rem;
+    height: 1rem;
+    padding: 1rem 2rem;
+
+    background-color: var(--bg-secondary-color);
+    caret-color: var(--text-primary-color);
+    color: var(--text-primary-color);
+
+    transition: background 200ms;
+  }
+  .--modal-input:hover
+  {
+    background-color: var(--bg-primary-hover-color);
+  }
+  .--modal-input:focus
+  {
+    background-color: var(--bg-primary-hover-color);
+  }
+  .--modal-input-error,
+  .--modal-input-success
+  {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 0.25rem;
+  }
+  .--modal-input-error
+  {
+    color: red // ! - change to more accurate
+  }
+  .--modal-input-success
+  {
+    color: lime// ! - change to more accurate
+  }
+
+  .--modal-label
+  {
+    color: var(--text-secondary-color);
+    font-style: italic;
+
+    span
+    {
+      font-style: normal;
+      font-weight: bold;
+    }
+  }
+  
+}
+
+.key-combo-warning
+{
+  color: var(--text-secondary-color);
 }
