--- a/src/css/popup.scss
+++ b/src/css/popup.scss
@@ -56,15 +56,15 @@ tr:not(:first-child):hover {
   margin: 5px 0px
 }
 
-svg {
-  fill: var(--bg-primary-hover-color);
-  transition: all 0.5s ease;
-}
+// svg {
+//   fill: var(--bg-primary-hover-color);
+//   transition: all 0.5s ease;
+// }
 
-svg:hover {
-  cursor: pointer;
-  fill: var(--yt-brand-color) !important;
-}
+// svg:hover {
+//   cursor: pointer;
+//   fill: var(--yt-brand-color) !important;
+// }
 
 .container {
   width: 280px;
@@ -100,7 +100,7 @@ label {
   font-size: 12px;
 }
 
-#extra_options_skip_threshold {
+#label_input_skip_threshold {
   margin-left: 4px;
 }
 
@@ -133,6 +133,19 @@ label {
   background: none;
   outline: none;
   border: none;
+  cursor: pointer;
+}
+.edit-btn svg
+{
+  fill: var(--bg-primary-hover-color);
+  height: 1rem;
+  width: 1rem;
+  transition: fill 200ms;
+}
+
+.edit-btn:hover svg
+{
+  fill: var(--text-primary-color);
 }
 
 table {
@@ -253,22 +266,42 @@ a {
   box-shadow: 0 0 3px #00000020;
 }
 
-.extra_options--row
+.label_input--row
 {
   display: grid;
   grid-template-columns: 5fr 1fr;
   text-wrap: balance;
   margin-bottom: 16px;
+  align-items: center;
+  justify-content: center;
+
+  [ type="number" ],
+  [ type="text" ] {
+    height: 1.75rem;
+  }
+
+  [ type="checkbox" ]
+  {
+    height: 1rem;
+    cursor: pointer;
+  }
+
 }
 
-.extra_options--row:last-child()
+// alternate colors for clarity
+// .label_input--row:nth-of-type(even)
+// {
+//   color: var(--text-secondary-color)
+// }
+
+.label_input--row:last-child()
 {
   margin-bottom: 0;
 }
 
 
-.extra_options--row input[type="number"],
-.extra_options--row input[type="text"]
+.label_input--row input[type="number"],
+.label_input--row input[type="text"]
 {
   outline: none;
   border: 1px var( --bg-secondary-hover-color ) solid;
@@ -278,28 +311,28 @@ a {
   border-radius: 100vh;
   width: 5rem;
 }
-.extra_options--row input[type="number"]:focus,
-.extra_options--row input[type="text"]:focus
+.label_input--row input[type="number"]:focus,
+.label_input--row input[type="text"]:focus
 {
   border: 2px var(--yt-brand-color) solid;
 }
 
 
-.extra_options--row input[type="checkbox"],
-.extra_options--row input[type="radio"],
-.extra_options--row input[type="range"]
+.label_input--row input[type="checkbox"],
+.label_input--row input[type="radio"],
+.label_input--row input[type="range"]
 {
   accent-color: var(--yt-brand-color);
 }
 
-.extra_options--row input[type="number"]::-webkit-outer-spin-button,
-.extra_options--row input[type="number"]::-webkit-inner-spin-button {
+.label_input--row input[type="number"]::-webkit-outer-spin-button,
+.label_input--row input[type="number"]::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
 
 /* Firefox */
-.extra_options--row input[type="number"] {
+.label_input--row input[type="number"] {
   -moz-appearance: textfield;
 }
 
@@ -348,26 +381,39 @@ a {
   .--page-indicator,
   .--page-indicator-active
   {
-    height: 1rem;
-    aspect-ratio: 1/1;
     border-radius: 5rem;
-    cursor: pointer;
+    height: 1.5rem;
+    width:  1.5rem;
+    padding: 1rem;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    transition: 
+      background 200ms,
+      stroke 200ms  
+    ;
   }
   
-  // todo  - change this to be an svg (fill + stroke)
-  .--page-indicator
+  .--page-indicator svg,
+  .--page-indicator-active svg
   {
-    border: 2px solid var( --text-secondary-color );
-    background: transparent;
+    height: 1.5rem;
+    width:  1.5rem;
   }
-  .--page-indicator-active
+  
+  .--page-indicator svg
   {
-    border: 2px solid var( --text-primary-color );
-    background: var( --text-primary-color );
+    fill: var(--text-secondary-color);
+  }
+  .--page-indicator-active svg
+  {
+    fill: var(--text-primary-color);
   }
 }
 
-.--footer-button-container
+.--flex-button-container
 {
   display: flex;
   width: fit-content;
@@ -387,13 +433,14 @@ a {
     outline: inherit;
   }
   
-  .--footer-button {
+  .--flex-button
+  {
     margin: 5px 0px;
     padding: 5px 10px;
 
     background-color: transparent;
-    color: var(--yt-brand-color );
-    outline: 1px var( --yt-brand-color ) solid;
+    color: var(--text-primary-color);
+    outline: 1px var( --text-primary-color ) solid;
 
     border-radius: 3px;
     box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.275);
@@ -401,11 +448,29 @@ a {
     transition: all 0.3s ease;
     font-size: 12px;
   }
-  
-  .--footer-button:hover {
-    background-color: var(--yt-brand-color );
-    color: var(--text-primary-color);
+  .--flex-button:hover {
+    background-color: var(--text-primary-color);
+    color: var(--bg-primary-color);
   }
+
+  .--flex-button.warn {
+    color: var(--yt-brand-color );
+    outline: 1px var( --yt-brand-color ) solid;
+  }
+  .--flex-button.warn:hover {
+    color: var(--text-primary-color );
+    background-color: var(--yt-brand-color);
+  }
+  .--flex-button.good {
+    color: var(--call-to-action-color);
+    outline: 1px var(--call-to-action-color) solid;
+  }
+  .--flex-button.good:hover {
+    color: var(--text-primary-color );
+    background-color: var(--call-to-action-color)
+  }
+  
+  
 }
 
 // this is for the github link
@@ -497,15 +562,16 @@ a {
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 0.25rem;
+    text-wrap: balance;
+    text-align: center;
   }
   .--modal-input-error
   {
-    color: red // ! - change to more accurate
+    color: var(--yt-brand-color)// ! - change to more accurate
   }
   .--modal-input-success
   {
-    color: lime// ! - change to more accurate
+    color: var(--call-to-action-color)// ! - change to more accurate
   }
 
   .--modal-label
@@ -651,4 +717,11 @@ input:checked + .autoplay-slider:before {
   font-size: 11px;
   color: white;
   z-index: 50;
+}
+
+.page-warning
+{
+  color: var(--text-secondary-color);
+  text-align: center;
+  padding-bottom: .5rem;
 }
