For #96 - Basic implementation for request

--- a/src/css/content.scss
+++ b/src/css/content.scss
@@ -128,3 +128,8 @@ input:checked + .autoplay-slider:before {
   color: white;
   z-index: 50;
 }
+
+.betterYT--comment-link
+{
+  color: rgb(152, 226, 239);
+}
