Fixes to font size in popup

--- a/src/css/globals.scss
+++ b/src/css/globals.scss
@@ -13,6 +13,8 @@
   --call-to-action-color: #3ea6ff;
 
   --max-height: 600px; // of the chrome popup 
+
+  font-size: 16px;
 }
 
 @media (prefers-color-scheme: dark) 
