--- a/src/css/popup.scss
+++ b/src/css/popup.scss
@@ -86,6 +86,7 @@ tr:not(:first-child):hover {
 
 .version {
   color: var(--bg-primary-hover-color);
+  font-size: 0.8rem;
 }
 
 .separation-line {
@@ -731,7 +732,9 @@ input:checked + .autoplay-slider:before {
 {
   color: var(--text-secondary-color);
   text-align: center;
-  padding-bottom: .5rem;
+  padding: .4rem 0;
+  font-size: .8rem;
+  word-wrap: balance;
 }
 
 #page-indicator {
