--- a/src/css/popup.scss
+++ b/src/css/popup.scss
@@ -69,6 +69,31 @@ tr:not(:first-child):hover {
   width: 280px;
 }
 
+.announcement {
+	background-color: var(--announcement-color);
+	padding: 5px 0px;
+	text-align: center;
+
+  a {
+    display: inline;
+  }
+
+  a:hover {
+    text-decoration: underline;
+  }
+
+  .close-btn {
+    float: right;
+    font-size: 14px;
+    padding-right: 16px;
+  }
+
+  .close-btn:hover {
+    text-decoration: none;
+    color: var(--yt-brand-color);
+  }
+}
+
 .content-container {
   padding: 0.75em 1em 0.5em 1em;
 }
