--- a/src/css/content.scss
+++ b/src/css/content.scss
@@ -62,23 +62,22 @@
   transition: .4s;
   border-radius: 27px;
 
-}
-
-.autoplay-slider:hover {
-  background-color: #3f3f3f;
-}
-
-.autoplay-slider:before {
-  position: absolute;
-  content: "";
-  height: 20px;
-  width: 20px;
-  left: 3px;
-  bottom: 3px;
-  background-color: white;
-  -webkit-transition: .4s;
-  transition: .4s;
-  border-radius: 50%;
+  &:hover {
+    background-color: #3f3f3f;
+  }
+  
+  &:before {
+    position: absolute;
+    content: "";
+    height: 20px;
+    width: 20px;
+    left: 3px;
+    bottom: 3px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+    border-radius: 50%;
+  }
 }
 
 input:checked + .autoplay-slider {
